# hwinfo

./: .gitignore  CMakeLists.txt  README.md  cpu-info.asm  main.c
.github/workflows/: cmake.yml
cmake/: hwinfo-config.cmake
include/info/: cpu.h
